# MaxyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
MaxyEngine/: Maxy.h  Maxy.hpp  mxpch.h  mxpch.hpp
MaxyEngine/Core/: Application.cpp  Application.h  Application.hpp  Core.h  EntryPoint.h  EntryPoint.hpp  FileSystem.cpp  FileSystem.hpp  Input.h  Input.hpp  KeyCodes.h  Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  LayerStack.hpp  Logger.cpp  Logger.h  MouseButtonCodes.hpp  Window.cpp  Window.h  Window.hpp  WindowProps.h  WindowProps.hpp  mxpch.h
MaxyEngine/Core/Events/: ApplicationEvent.h  ApplicationEvent.hpp  Event.h  Event.hpp  Events.h  Events.hpp  KeyEvent.h  KeyEvent.hpp  MouseEvent.h  MouseEvent.hpp
MaxyEngine/Core/ImGUI/: ImGUIBuild.cpp  ImGUICustomStyle.h  ImGUILayer.cpp  ImGUILayer.h  ImGUILayer.hpp
MaxyEngine/Core/ImGUI/UI/: Profiler.h  Style.h
MaxyEngine/Core/Renderer/: Context.h  Context.hpp  Shader.cpp  Shader.hpp
MaxyEngine/Platform/Desktop/: DesktopInput.cpp  DesktopInput.hpp  DesktopWindow.cpp  DesktopWindow.hpp
MaxyEngine/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxInput.hpp  LinuxWindow.cpp  LinuxWindow.h  LinuxWindow.hpp
MaxyEngine/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLContext.hpp  imguiOpenGL.cpp
MaxyEngine/Platform/Renderer/OpenGL/: OpenGLContext.cpp  OpenGLContext.hpp
MaxyEngine/Platform/Renderer/Vulkan/: VulkanContext.cpp  VulkanContext.hpp
MaxyEngine/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.h  WindowsWindow.hpp
SandBox/: App.cpp  Core.cpp
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
